Add link to blog

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <head></head>
 <body>
-Hello World
+WIP Personal page for Luis de Bethencourt
+<p>
+<a href="http://luisbg.blogalia.com">Blog</a>
 </body>
