--- a/index.html
+++ b/index.html
@@ -2,5 +2,10 @@
 <body>
 WIP Personal page for Luis de Bethencourt
 <p>
+<center>
+  <img src="smoot-dino.jpg">
+  <p>This page is currently evolving. Dinos at work.
+</center>
+<p>
 <a href="http://luisbg.blogalia.com">Blog</a>
 </body>
